
INCLUDES = -I$(top_srcdir)

bin_PROGRAMS = hades

hades_SOURCES = \
    http_listener.cpp http_listener.h \
    http_connection.cpp http_connection.h \
    minecraft_listener.cpp minecraft_listener.h \
    minecraft_connection.cpp minecraft_connection.h \
    hades.cpp

hades_LDADD = -lboost_system
